--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <nav>
-        <li>
-            <ul>Home</ul>
-            <ul>Acerca de mí</ul>
-            <ul>Mis habilidades</ul>
-            <ul>Experiencia</ul>
-            <ul>Mi portafolio</ul>
-            <ul>contacto</ul>
-        </li>
+        <ul>
+            <li>Home</li>
+            <li>Acerca de mí</li>
+            <li>Mis habilidades</li>
+            <li>Experiencia</li>
+            <li>Mi portafolio</li>
+            <li>contacto</li>
+        </ul>
     </nav>
     
     <section id="presentacion">
