fondo de la presentacion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </nav>
     
     <section id="presentacion">
-
+        <div>
+            <img src="./Vectores/Estructura home desktop.png" alt="home">
+        </div>
     </section>
     <section id="descripcion"></section>
     <section id="estudios"></section>
