avance en la descripcion de la presentacion

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
         <div>
             <img src="./Vectores/Estructura home desktop.png" alt="home">
         </div>
+        <section id="name-presentacion">
+            <p>Soy</p>
+            <h1>Charles Castillo</h1>
+        </section>
+        <section id="descripcion-presentacion">
+            <p>Creo, diseño y desarrollo para darle el</p>
+            <p>valor a tu producto.</p>
+        </section>
+        <div id="exp-1">
+            <p>Fundamentos</p>
+            <h1>2 meses</h1>
+        </div>
     </section>
     <section id="descripcion"></section>
     <section id="estudios"></section>
