redes de la presentacion

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
             <p>Fundamentos</p>
             <h1>2 meses</h1>
         </div>
+        <div id="redes">
+            <div class="red-presentacion" id="redp1">
+                <img src="./Iconos/linkedin.svg" alt="linkedin">
+            </div>
+            <div class="red-presentacion" id="redp2">
+                <img src="./Iconos/twitter.svg" alt="twitter">
+            </div>
+            <div class="red-presentacion" id="redp3">
+                <img src="./Iconos/instagram.svg" alt="instagram">
+            </div>
+        </div>
     </section>
     <section id="descripcion"></section>
     <section id="estudios"></section>
