--- a/index.html
+++ b/index.html
@@ -46,8 +46,17 @@
                 <img src="./Iconos/instagram.svg" alt="instagram">
             </div>
         </div>
+        <div id="colaboracion">
+            <p>¿Te gustaría colaborar juntos creando productos increíbles?</p>
+            <form class="form">
+                <input type="text" value="        Deje su correo aquí...">
+            </form>
+            <div class="boton1"><a>¡Listo!</a></div>
+        </div>
     </section>
-    <section id="descripcion"></section>
+    <section id="descripcion">
+        <h1>Acerca de mí</h1>
+    </section>
     <section id="estudios"></section>
     <section id="habilidades"></section>
     <section id="experiencia"></section>
