about me terminado

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
     </section>
     <section id="descripcion">
         <h1>Acerca de mí</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam praesentium dolorem dolore molestias autem modi
+            distinctio maxime soluta. Necessitatibus ipsa sed odio animi fugiat. Ipsam, eaque. Necessitatibus, maxime. Ratione,
+            ducimus.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam praesentium dolorem dolore molestias autem modi
+            distinctio maxime soluta. Necessitatibus ipsa sed odio animi fugiat. Ipsam, eaque. Necessitatibus, maxime. Ratione,
+            ducimus.
+        </p>
     </section>
     <section id="estudios"></section>
     <section id="habilidades"></section>
