--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             distinctio maxime soluta. Necessitatibus ipsa sed odio animi fugiat. Ipsam, eaque. Necessitatibus, maxime. Ratione,
             ducimus.
         </p>
+        <div class="boton2"><p>Download CV</p></div>
     </section>
     <section id="estudios"></section>
     <section id="habilidades"></section>
