--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@
         </p>
         <div class="boton2"><p>Download CV</p></div>
     </section>
-    <section id="estudios"></section>
+    <section id="estudios">
+        <div>
+            <h1>Estudios</h1>
+        </div>
+        <div>
+            <div class="estudio">
+                <img src="./Logos-Imágenes/logo_academlo.png" alt="logo_academlo">
+                <h2>Academlo</h2>
+                <br>
+                <h6>2021-2022</h6>
+                <br>
+                <p>Programa full stack</p>
+                
+            </div>
+        </div>
+    </section>
     <section id="habilidades"></section>
     <section id="experiencia"></section>
     <section id="portafolio"></section>
