--- a/index.html
+++ b/index.html
@@ -84,7 +84,30 @@
             </div>
         </div>
     </section>
-    <section id="habilidades"></section>
+    <section id="habilidades">
+        <div>
+            <h1>Habilidades</h1>
+        </div>
+        <div>
+            <p>HTML</p>
+            <div class="container">
+                <div class="barra html">65%</div>
+            </div>
+            
+            <p>CSS</p>
+            <div class="container">
+                <div class="barra css">70%</div>
+            </div>
+            <p>JavaScript</p>
+            <div class="container">
+                <div class="barra javascript">50%</div>
+            </div>
+            <p>Java</p>
+            <div class="container">
+                <div class="barra java">60%</div>
+            </div>
+        </div>
+    </section>
     <section id="experiencia"></section>
     <section id="portafolio"></section>
     <section id="contacto"></section>
