En el anterior commit era habilidades realizadas, en este commit recien termino la parte de experiencia

--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
             </div>
         </div>
     </section>
-    <section id="experiencia"></section>
+    <section id="experiencia">
+        <h1>Experiencia</h1>
+        <div><p>Sin experiencia</p></div>
+    </section>
     <section id="portafolio"></section>
     <section id="contacto"></section>
     <footer></footer>
