Parte de  contacto realizado

--- a/index.html
+++ b/index.html
@@ -112,8 +112,30 @@
         <h1>Experiencia</h1>
         <div><p>Sin experiencia</p></div>
     </section>
-    <section id="portafolio"></section>
-    <section id="contacto"></section>
+    <section id="portafolio">
+        <h1>Mi portafolio</h1>
+        <div><p>Sin proyectos por ahora...</p></div>
+    </section>
+
+    <section id="contacto">
+        <h1>Contacto</h1>
+        <div id="container-contact">
+            <div id="c1">
+                <div class="contact">
+                    <img src="./Iconos/phone.svg" alt="linkedin">
+                </div>
+                <h4>Número celular</h4>
+                <p>962028767</p>
+            </div>
+            <div id="c2">
+                <div class="contact">
+                    <img src="./Iconos/mail.svg" alt="mail">
+                </div>
+                <h4>Email</h4>
+                <p>castillo089frosty@gmail.com</p>
+            </div>
+        </div>
+    </section>
     <footer></footer>
 </body>
 </html>
