--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
             </div>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <h1>Charles Castillo</h1>
+        <p>Hecho con ♥ en Academlo</p>
+    </footer>
 </body>
 </html>
