--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="menu">
+        <label for="menu">
+            <img src="./Iconos/menu.svg" alt="">
+        </label>
         <ul>
             <li>Home</li>
             <li>Acerca de mí</li>
